--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
                 <li class="d-flex"> <div> <img class="karandash" src="./img/карандаш.png" alt=""> </div>
                     <div>Name: <span> Vladislav Sinitsyn</span></div> </li>
 
-                <li class="d-flex"> <div> <img class="location" src="./img/карандаш.png" alt=""> </div>
+                <li class="d-flex"> <div> <img class="location" src="./img/локация.png" alt=""> </div>
                     <div>Location: <span>Cherepovets Russian</span></div></li>
 
-                <li class="d-flex"> <div> <img class="date" src="./img/карандаш.png" alt=""> </div>
+                <li class="d-flex"> <div> <img class="date" src="./img/календарь.png" alt=""> </div>
                     <div>Date of Birth:  <span> October 9, 2010</span></div></li>
 
                 <li class="d-flex"> <div> <img class="poshta" src="./img/почта.png" alt=""> </div>
                      <div > <a class="lend" href="contactme@templatename.com">*************gmail.com</a></div></li>
 
-                     <li class="d-flex"> <div> <img class="fone__number" src="./img/карандаш.png" alt=""> </div>
-                        <div>***********</div></li>
+                     <li class="d-flex"> <div> <img class="fone__number" src="./img/звонок.png" alt=""> </div>
+                        <div>+89*********</div></li>
 
-                <li class="d-flex"> <div> <img class="dasktop" src="./img/карандаш.png" alt=""> </div>
+                <li class="d-flex"> <div> <img class="dasktop" src="./img/локация.png" alt=""> </div>
                         <div > <a class="lend" href="www.mytemplatename.com">www.mytemplatename.com</a></div></li>    
             </ul>
         </div>
